# Aruba-Clearpass-MCP-Server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml
examples/: check_connection.py  investigate_device.md  onboard_guest.md  quarantine_endpoint.md
src/clearpass_mcp/: __init__.py  __main__.py  audit.py  catalog.py  client.py  config.py  server.py
src/clearpass_mcp/tools/: __init__.py  admin.py  endpoints.py  generic.py  guests.py  sessions.py
tests/: conftest.py  test_cli.py  test_client.py  test_curated_tools.py  test_generic_tools.py
