[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearpass-mcp"
version = "1.0.0"
description = "Community MCP server for Aruba ClearPass Policy Manager — AI-assistant integration via the CPPM v1 REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nandi-Pura" }]
keywords = ["mcp", "aruba", "clearpass", "network", "policy-manager", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
clearpass-mcp = "clearpass_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/Nandi-Pura/Aruba-Clearpass-MCP-Server"
Repository = "https://github.com/Nandi-Pura/Aruba-Clearpass-MCP-Server"
Issues = "https://github.com/Nandi-Pura/Aruba-Clearpass-MCP-Server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clearpass_mcp"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90"]
ignore = ["B008"]  # do not perform function calls in default args (FastMCP pattern)

[tool.ruff.lint.isort]
known-first-party = ["clearpass_mcp"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false  # FastMCP returns Any in some helpers
